@@ -1,5 +1,9 @@
 2000-02-10  Frank Strauss  <strauss@ibr.cs.tu-bs.de>
 
+	* tools/smiquery.c: implicitly defined types are no longer
+	exported with visible names. So `smiquery type ...' now must
+	detect node names to retrieve their implicit types.
+
 	* mibs/ietf/SNMPv2-USEC-MIB: added module (RFC 1910).
 	
 	* lib/smi.c: fixed smiGetXXX() functions to find items even
